<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="11dp">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="356dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:inputType="text|textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="4dp"
        android:labelFor="@id/editTextUsername"
        android:text="@string/username"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="514dp"
        android:labelFor="@id/editTextPassword"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="464dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="590dp"
        android:text="@string/login"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/mainSignUpBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainSignUpBtn"
        style="@style/Button.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="590dp"
        android:text="@string/signUp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="209dp"
        android:layout_height="209dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="470dp"
        android:contentDescription="@string/logo_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165"
        app:srcCompat="@drawable/temporary_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>