...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/centerImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/centerRestaurantImage"
            android:layout_width="409dp"
            android:layout_height="500dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="96dp"
            android:background="#000000"
            android:contentDescription="@string/imageDescription"
...
