...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/usernameInput"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username" />

            <ImageView
                android:id="@+id/sendRequestButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/person_add"
                android:contentDescription="@string/send_friend_request" />
        </LinearLayout>

...
